--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,8 +17,16 @@
 
     </android.support.v7.widget.Toolbar>
 
+    <TextView
+        android:id="@+id/btn_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LogOut"
+        android:layout_alignParentRight="true"
+        android:layout_margin="15dp"/>
     <FrameLayout
         android:id="@+id/lyt_view"
+        android:layout_below="@id/toolbar_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
@@ -30,4 +38,4 @@
 
     </FrameLayout>
 
-</LinearLayout>
+</RelativeLayout>
