--- a/app/src/main/res/layout/viewholder_admin_list_order.xml
+++ b/app/src/main/res/layout/viewholder_admin_list_order.xml
@@ -21,7 +21,7 @@
         android:padding="10dp"
 
         android:layout_height="165dp">
-        <ImageView
+        <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/icon_food"
             android:layout_width="120dp"
             android:background="#fff"
