--- a/app/src/main/res/layout/viewholder_home.xml
+++ b/app/src/main/res/layout/viewholder_home.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="170dp"
-    android:layout_marginBottom="10dp">
+    android:layout_height="200dp"
+    android:padding="10dp"
+    >
     <com.android.volley.toolbox.NetworkImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:scaleType="fitXY"
         android:id="@+id/img_food"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -26,8 +28,6 @@
         android:layout_width="match_parent"
         android:background="#000"
         android:alpha="0.65"
-        android:layout_marginLeft="13dp"
-        android:layout_marginRight="13dp"
         android:layout_alignParentBottom="true"
         android:layout_height="70dp" />
     <TextView
@@ -50,8 +50,7 @@
         android:textColor="#fff"
         android:layout_alignParentBottom="true"
         android:paddingBottom="10dp"
-        android:paddingLeft="30dp"
-        />
+        android:paddingLeft="30dp"/>
     <ImageView
         android:layout_width="50dp"
         android:id="@+id/btn_cast"
